# Computer-Vision-using-OpenCV

./: README.md
Background_Estimation/: CMakeLists.txt  bg_estimation.cpp
Bitwise_Operations/: bitwise_ops.py
Blob_detection/: blob_detection.py
Color Detection/: CMakeLists.txt  color_detection.cpp
Computing_Histograms/Colored_histogram/: color_histogram.py
Computing_Histograms/Histogram_masked/: histogram_masked.py
Contour detection/: shapes_contours.cpp
Contour_and_warp/: CMakeLists.txt
Counter detection/: CMakeLists.txt
Distance_Measurement/: faceDepthDetection.py
Edge_detection/: CMakeLists.txt  edge_detection.cpp
Face_Mesh/: facial_landmarks.py
Face_detection_harrcascade/: CMakeLists.txt  face_detection.cpp
Face_recognition/: facial_recognition.py
Facemesh_cvzone/: faceMesh_using_cvzone.py
Filtering/: CMakeLists.txt  filtering.cpp
Hand_Tracking/: handTracking.py
Harris_corner_detection/: harris_corner_detection.py
Image_sharpning/: sharpening.py
Noise_smoothing/: noise_smooth.cpp
OCR_with_PaddleOCR/: PaddleOCR.ipynb  README.md
ObjectTracking_with_tf_centernet/: objectTracking.ipynb
QR_and_Barcode_scanner/: qrBarDetector.py
Realtime_color_detection_video/: color_picker.cpp
Thresholding/: CMakeLists.txt  thresholding.cpp
Warp perspective/: CMakeLists.txt  warp_perspective.cpp
bg_removal/: bg_removal.py
contour_and_warp/: scanner.cpp
object_tracking/: README.md  object_tracking.py  track_object.cpp
pose_estimationMin/: pose_estimationMin.py
realtime_color_detection_video/: CMakeLists.txt
(+1 files in other folders)
